--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,11 @@
     <header class="page-header">
       <div class="page-header__wrapper">
         <a class="page-header__logo">
-          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191px" height="39px" alt="CatEnergy">
+          </picture>
         </a>
         <button class="page-header__toggle page-header__toggle--off" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
@@ -39,7 +43,11 @@
             <div class="production__card">
               <div class="production__logo">
                 <a class="production__link-img" href="about-chicken500.html">
-                  <img class="production__photo" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Pro 500г курица">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                    <img class="production__photo production__photo--small" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500г курица">
+                  </picture>
                 </a>
               </div>
               <div class="production__text">
@@ -69,7 +77,11 @@
             <div class="production__card">
               <div class="production__logo">
                 <a class="production__link-img" href="about-chicken1000.html">
-                  <img class="production__photo" src="img/chicken-big-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Pro 1000г курица">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                    <img class="production__photo production__photo--big" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 1000г курица">
+                  </picture>
                 </a>
               </div>
               <div class="production__text">
@@ -99,7 +111,11 @@
             <div class="production__card">
               <div class="production__logo">
                 <a class="production__link-img" href="about-fish500.html">
-                  <img class="production__photo" src="img/fish-small-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Pro 500г рыба">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png 1x, img/fish-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/fish-small-tablet@2x.png 2x">
+                    <img class="production__photo production__photo--small" src="img/fish-small-mobile@1x.jpg" width="140" height="144" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Cat Energy Pro 500г рыба">
+                  </picture>
                 </a>
               </div>
               <div class="production__text">
@@ -129,7 +145,11 @@
             <div class="production__card">
               <div class="production__logo">
                 <a class="production__link-img" href="about-fish1000.html">
-                  <img class="production__photo" src="img/fish-big-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Pro 1000г рыба">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                    <img class="production__photo production__photo--big" src="img/fish-big-mobile@1x.jpg" width="140" height="144" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Cat Energy Pro 1000г рыба">
+                  </picture>
                 </a>
               </div>
               <div class="production__text">
@@ -159,7 +179,11 @@
             <div class="production__card">
               <div class="production__logo">
                 <a class="production__link-img" href="about-buckwheat500.html">
-                  <img class="production__photo" src="img/buckwheat-small-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Slim 500г гречка">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                    <img class="production__photo production__photo--small" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy Slim 500г гречка">
+                  </picture>
                 </a>
               </div>
               <div class="production__text">
@@ -189,7 +213,11 @@
             <div class="production__card">
               <div class="production__logo">
                 <a class="production__link-img" href="about-buckwheat1000.html">
-                  <img class="production__photo" src="img/buckwheat-big-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Slim 1000г гречка">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                    <img class="production__photo production__photo--big" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy Slim 1000г гречка">
+                  </picture>
                 </a>
               </div>
               <div class="production__text">
@@ -219,7 +247,11 @@
             <div class="production__card">
               <div class="production__logo">
                 <a class="production__link-img" href="about-rice500.html">
-                  <img class="production__photo" src="img/rice-small-mobile@1x.jpg" width="140px" height="144px" alt="Cat Energy Slim 500г рис">
+                  <picture>
+                    <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                    <img class="production__photo production__photo--small" src="img/rice-small-mobile@1x.jpg" width="140" height="144" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Cat Energy Slim 500г рис">
+                  </picture>
                 </a>
               </div>
               <div class="production__text">
@@ -297,7 +329,11 @@
             <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
           </div>
         </div>
-        <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320px" height="400px" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        <picture>
+          <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablt@2x.png 2x">
+          <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320px" height="400px" srcset="img/bg-map-mobile@2x.png 2x" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        </picture>
         <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036956120251!2d30.321819042794047!3d59.93871800241896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1586373870144!5m2!1sru!2sru"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </section>
     </main>
