--- a/source/programs.html
+++ b/source/programs.html
@@ -84,7 +84,7 @@
                   <label class="form__label" for="master-email">E-mail:*</label>
                   <input class="form__input form__input--email" type="email" id="master-email" name="master-email" placeholder="kuklachev@gmail.com" required>
                   <span class="form__icon form__icon--email">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve" fill="currentColor">
+                    <svg viewBox="0 0 17 13" fill="currentColor">
                       <path d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
                     </svg>
                   </span>
@@ -93,7 +93,7 @@
                   <label class="form__label" for="master-tel">Телефон:*</label>
                   <input class="form__input form__input--tel" type="tel" id="master-tel" name="master-tel" placeholder="8 (960) 900-60-90" required>
                   <span class="form__icon form__icon--tel">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve" fill="currentColor">
+                    <svg  viewBox="0 0 20 20" fill="currentColor">
                       <path d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/>
                       <path
                         d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
@@ -161,7 +161,11 @@
             <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
           </div>
         </div>
-        <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320px" height="400px" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        <picture>
+          <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablt@2x.png 2x">
+          <img class="contacts__map-nojs" src="img/bg-map-mobile@1x.png" width="320px" height="400px" srcset="img/bg-map-mobile@2x.png 2x" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        </picture>
         <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036956120251!2d30.321819042794047!3d59.93871800241896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1586373870144!5m2!1sru!2sru"  allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </section>
 
